examples/bad/16-01-break-inside-function.lagger
int f(){
    println(1);
    break;
    return 0;
}

int main(){
    int i = 0;
    while( i < 10){
        i = i + 1;
        f();
    }
    return 0;
}

